--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Kommentarer</title>
   <link rel="stylesheet" href="styles.css" />
-  <!-- Tips: Byt API_BASE i app.js till din Apps Script Web App-URL (slutar på /exec) -->
 </head>
 <body>
   <main class="wrap">
@@ -39,7 +38,26 @@
       <ul id="feed" class="feed" aria-live="polite"></ul>
       <p id="status" class="muted small"></p>
     </section>
+
+    <!-- Admin-panel -->
+    <section class="card" id="adminPanel" hidden>
+      <div class="list-header">
+        <h2>🛡️ Moderering</h2>
+        <div class="admin-controls">
+          <input id="adminToken" type="password" placeholder="Admin‑token" />
+          <button id="adminLogin" class="small">Logga in</button>
+          <button id="adminLogout" class="ghost small" hidden>Logga ut</button>
+          <button id="adminRefresh" class="ghost small" hidden>Pendings</button>
+        </div>
+      </div>
+      <ul id="pendingList" class="feed" aria-live="polite"></ul>
+      <p id="adminStatus" class="muted small"></p>
+    </section>
   </main>
+
+  <!-- Toast for confirmations -->
+  <div id="toast" class="toast" role="status" aria-live="assertive" aria-atomic="true"></div>
+
   <script src="app.js"></script>
 </body>
 </html>
