--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="row">
           <label for="comment">Kommentar</label>
-          <textarea id="comment" name="comment" rows="4" maxlength="500" placeholder="Ex: Bra jobbat klassen vid senaste insamlingen!"></textarea>
+          <textarea id="comment" name="comment" rows="4" maxlength="500" placeholder="Ex: Bra jobbat!"></textarea>
           <div class="help"><span id="charCount">0</span>/500 tecken</div>
         </div>
         <div class="actions">
