chore(frontend): add cache-buster for CSS/JS to avoid stale assets

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Kommentarer</title>
-  styles.css
+  styles.css?v=2025-10-04-1
   <meta name="color-scheme" content="light dark" />
 </head>
 <body>
@@ -73,6 +73,6 @@
   <!-- Toast för kvittenser -->
   <div id="toast" class="toast" role="status" aria-live="assertive" aria-atomic="true"></div>
 
-  app.js</script>
+  app.js?v=2025-10-04-1</script>
 </body>
 </html>
